# cerebras-gemma-4-hcktn

./: BUILD_INFO.md  README.md
memeforge/: README.md  pyproject.toml
memeforge/src/memeforge/: app.py  audit.py  cerebras_client.py  config.py  contracts.py  personas.py  pipeline.py  render.py  web.py
memeforge/src/memeforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
memeforge/src/memeforge/agents/: base.py  comedian.py  judge.py
memeforge/src/memeforge/static/: gpu.html  index.html
memeforge/tests/: test_contracts.py  test_pipeline.py  test_render.py  test_web.py
redteam/: .env.example  README.md  pyproject.toml
redteam/src/redteam/: app.py  audit.py  cerebras_client.py  config.py  contracts.py  ingest.py  pipeline.py  rate_limiter.py  roles.py  server.py
redteam/src/redteam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
redteam/src/redteam/agents/: base.py  moderator.py  reviewer.py  vision_reader.py
redteam/src/redteam/static/: index.html
redteam/tests/: bad_contract.txt  test_contracts.py  test_pipeline.py
reflex/: .gitignore  README.md  pyproject.toml
reflex/src/reflex/: app.py  audit.py  cerebras_client.py  config.py  contracts.py  frames.py  gemini_baseline.py  orchestrator.py  rate_limiter.py  telemetry.py
reflex/src/reflex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reflex/src/reflex/agents/: base.py  coach.py  error_sentinel.py  narrator.py  (+2 more)
reflex/tests/: test_agents.py  test_app.py  test_cerebras_client.py  test_cerebras_real.py  test_contracts.py  test_frames.py  test_orchestrator.py  test_telemetry.py
