[project]
name = "memeforge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "anyio>=4.0",
  "pillow>=10.0",
  "fastapi>=0.100",
  "uvicorn>=0.20",
]



[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "mypy>=1.10", "ruff>=0.5", "pyright>=1.1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
